# VGDLx

./: README.md  pyproject.toml
benchmarks/: plot_vs_gvgai.py  profile_jax.py  profile_portals.py  profile_step.py  throughput.py  throughput_vs_gvgai.py
benchmarks/results/: throughput_vs_gvgai.json
benchmarks/results/jax/cpu/: Aliens.json
benchmarks/results/pyvgdl/: Aliens.json  BoulderDash.json  Chase.json  Frogs.json  MissileCommand.json  Portals.json  Sokoban.json  SurviveZombies.json  Zelda.json
docs/: 2026-03-14-divergence-investigation.md
scripts/: bfs_solve.py  debug_divergence.py  play.py  validate_all.py
tests/: MECHANICS_DIFF.md  conftest.py  test_continuous.py  test_discovery.py  test_env.py  test_integration_aliens.py  test_integration_common.py  test_integration_zelda.py  test_render_pygame.py
tests/pyvgdl_validation/: test_cross_engine.py  test_validate.py
vgdl_jax/: collision.py  compiler.py  data_model.py  effects.py  env.py  parser.py  sprites.py  state.py  step.py
vgdl_jax/validate/: __init__.py  backend_gvgai.py  constants.py  discovery.py  harness.py  rng_replay.py  state_extractor.py
