[project]
name = "vgdl-jax"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "jax[cpu]>=0.4.30",
    "flax>=0.8",
    "chex>=0.1.86",
]

[project.optional-dependencies]
dev = ["pytest"]
render = ["pygame", "numpy"]
benchmark = ["matplotlib"]
all = ["vgdl-jax[dev,render,benchmark]"]

[tool.pytest.ini_options]
pythonpath = ["tests"]
addopts = "--ignore=tests/pyvgdl_validation"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
